Remove Path.of() to fix android versions > sdk 34